--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,22 +1,22 @@
 # Name of the project
 PROJ_NAME = SMART_HOME
-TEST_PROJ_NAME = Test_$(PROJ_NAME)
 
-BUILD_DIR = Build
+
 
 # All source code files
-SRC =src/devicefunctions.c
+SRC =mainProject.c\
+src/topicfunctions.c
 
 # All test source files
-TEST_SRC = test/smarthome.c\
+TEST_SRC = src/topicfunctions.c\
+test/smarthome.c\
 unity/unity.c
 
 # All include folders with header files
-INC = -Iinc\
--Iunity\
+
 
 #To check if the OS is Windows or Linux and set the executable file extension and delete command accordingly
-ifdef OS
+ifdef OS 
    RM = del /q
    FixPath = $(subst /,\,$1)
    EXEC = exe
@@ -26,30 +26,31 @@ else
       RM = rm -rf
       FixPath = $1
 	  EXEC = out
-	  IN=-lm
+	  
    endif
 endif
-
+TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).$(EXEC)
+INC = -Iinc\
+-Iunity\
 # Makefile will not run target command if the name with file already exists. To override, use .PHONY
-.PHONY : all run test coverage cppcheck valgrind clean
-all:$(BUILD_DIR)
-	gcc mainProject.c $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC)) $(IN)
-run: all
-	$(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
-test: $(SRC) $(TEST_SRC)
-	gcc $^ $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC)) $(IN)
-	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC)) 
-	
-coverage:${PROJECT_NAME}
-	gcc -fprofile-arcs -ftest-coverage $(SRC) $(TEST_SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC)) $(IN)
-	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
-	gcov -a $(SRC)
-	
-cppcheck: $(SRC)
-	cppcheck --enable=all main.c $(SRC)
-valgrind:
-	valgrind $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
+
+build_test:
+	gcc $(TEST_SRC) $(INC) $(INCLUDE_LIBS) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
+
+run_test: build_test
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
+
+analyze: test memcheck staticcheck coverage sanitize_check
+
+staticcheck:
+	cppcheck --enable=all -iunity .
+
+memcheck:
+	valgrind ./$(TEST_OUTPUT)
+
+sanitize_check:
+	gcc -fsanitize=address -fno-omit-frame-pointer $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) 
+	./$(TEST_OUTPUT)
 
 clean:
-	$(RM) $(call FixPath,$(BUILD_DIR)/*)
-	rmdir $(BUILD_DIR) 
+	$(RM) $(call FixPath,$(PROJ_NAME).$(EXEC))
